Fixed a spacing and alignment issue.

--- a/public/styles/default.sass
+++ b/public/styles/default.sass
@@ -9,8 +9,8 @@ body
   padding: 0
 
 h1
-  height: 64px
-  line-height: 64px
+  height: 61px
+  line-height: 61px
   margin: 0
   text-transform: uppercase
   font-size: 16px
@@ -20,7 +20,8 @@ h1
   text-overflow: ellipsis
 
 .status-text
-  line-height: 64px
+  height: 61px
+  line-height: 61px
   font-size: 18px
   text-transform: uppercase
 
